Better color selection and set found vars insede the for loop

--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@
   flex-basis: 40%;
 }
 
-.fieldNameCol, .deleteButtonCol {
-  flex-basis: 10%;
+.fieldNameCol {
+  flex-basis: 14%;
+}
+
+.deleteButtonCol {
+  flex-basis: 6%;
 }
 
 p, input, textarea {
