--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   margin-top: 2px;
 }
 
+#fieldDefsHeader p, #resultingCVS p, #textSource p {
+  font-weight: bold;
+}
+
 #dataDefinition, #dataSource {
   flex-basis: 50%;
   padding: 5px;
