--- a/style.css
+++ b/style.css
@@ -1,14 +1,32 @@
-#main, #fieldDefsHeader, .fieldDefsRow, .addRowButton {
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+
+#fieldDefsHeader,
+.fieldDefsRow,
+.addRowButton {
   display: flex;
   flex-direction: row;
   margin-top: 2px;
 }
 
-#fieldDefsHeader p, #resultingCVS p, #textSource p {
+#fieldDefsHeader p,
+#resultingCVS p,
+#dataSource p {
   font-weight: bold;
 }
 
-#dataDefinition, #dataSource {
+#dataDefinition,
+#dataSource {
+  display: flex;
+  flex-direction: column;
   flex-basis: 50%;
   padding: 5px;
 }
@@ -25,23 +43,31 @@
   flex-basis: 6%;
 }
 
-p, input, textarea {
-  width: 100%;
-  box-sizing: border-box;
+p,
+input,
+textarea {
   padding: 2px 5px;
   margin: 0px;
 }
 
-div {
+divp,
+input,
+textarea {
   width: 100%;
   box-sizing: border-box;
 }
 
-#webpageinput, #sourceinput, #csvinput, #sourceinputselectable {
+#sourceinput,
+#csvinput,
+#sourceinputselectable {
   min-height: 200px;
+  resize: vertical;
 }
 
 #sourceinputselectable {
-  border: 1px solid red;
+  height: 100%;
+  overflow-y: scroll;
+  border: 1px solid;
+  padding: 3px;
+  font-family: monospace;
 }
-
