Added export and import field definition capability

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 #fieldDefsHeader,
-.fieldDefsRow,
-.addRowButton {
+#fieldDefToolBar,
+.fieldDefsRow {
   display: flex;
   flex-direction: row;
   margin-top: 2px;
@@ -50,7 +50,7 @@ textarea {
   margin: 0px;
 }
 
-divp,
+div,
 input,
 textarea {
   width: 100%;
@@ -70,4 +70,8 @@ textarea {
   border: 1px solid;
   padding: 3px;
   font-family: monospace;
+}
+
+.fieldDefToolBarButton {
+  margin-right: 5px;
 }
