Enhanced CSV parser; quote string containing CSV separators; Add a complete row as soon as one value is found

--- a/style.css
+++ b/style.css
@@ -57,10 +57,14 @@ textarea {
   box-sizing: border-box;
 }
 
-#sourceinput,
 #csvinput,
 #sourceinputselectable {
   min-height: 200px;
+  resize: vertical;
+}
+
+#sourceinput {
+  min-height: 100px;
   resize: vertical;
 }
 
