--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
   padding: 0px;
 }
 
+button {
+  margin-right: 5px;
+}
+
 #main {
   display: flex;
   flex-direction: row;
@@ -17,9 +21,7 @@ body {
   margin-top: 2px;
 }
 
-#fieldDefsHeader p,
-#resultingCVS p,
-#dataSource p {
+.boldHeader {
   font-weight: bold;
 }
 
@@ -76,6 +78,3 @@ textarea {
   font-family: monospace;
 }
 
-.fieldDefToolBarButton {
-  margin-right: 5px;
-}
