Added a Add Row Before button to each field row

--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ button {
   flex-basis: 14%;
 }
 
-.deleteButtonCol {
-  flex-basis: 6%;
+.deleteButtonCol, .addBeforeButtonCol {
+  flex-basis: 3%;
 }
 
 p,
